--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
+    "moment": "^2.29.1",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
