--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "moment": "^2.29.1",
+    "mongoose": "^6.0.8",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "winston": "^3.3.3"
